--- a/server/core/src/https/ui_html.html
+++ b/server/core/src/https/ui_html.html
@@ -5,35 +5,41 @@
         <meta charset="utf-8" />
         <meta name="theme-color" content="white" />
         <meta name="viewport" content="width=device-width" />
-        <title>{}</title>
-
-        <link rel="icon" href="/pkg/img/favicon.png" />
+        <title>{display_name}</title>
         <link rel="manifest" href="/manifest.webmanifest" />
-        <link rel="apple-touch-icon" href="/pkg/img/logo-256.png" />
+
+        <link rel="icon"
+            href="/pkg/img/favicon.png?v={cache_buster_key}" />
+        <link rel="apple-touch-icon"
+            href="/pkg/img/logo-256.png?v={cache_buster_key}" />
         <link rel="apple-touch-icon" sizes="180x180"
-            href="/pkg/img/logo-180.png" />
+            href="/pkg/img/logo-180.png?v={cache_buster_key}" />
         <link rel="apple-touch-icon" sizes="192x192"
-            href="/pkg/img/logo-192.png" />
+            href="/pkg/img/logo-192.png?v={cache_buster_key}" />
         <link rel="apple-touch-icon" sizes="512x512"
-            href="/pkg/img/logo-square.svg" />
+            href="/pkg/img/logo-square.svg?v={cache_buster_key}" />
         <link rel="stylesheet" href="/pkg/external/bootstrap.min.css"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" />
-        <link rel="stylesheet" href="/pkg/style.css" />
+        <link rel="stylesheet"
+            href="/pkg/style.css?v={cache_buster_key}" />
 
-        {}
+        {jstags}
 
     </head>
     <body class="flex-column d-flex h-100">
         <main class="flex-shrink-0 form-signin">
             <center>
-                <img src="/pkg/img/logo-square.svg" alt="Kanidm"
+                <img
+                    src="/pkg/img/logo-square.svg?v={cache_buster_key}"
+                    alt="Kanidm"
                     class="kanidm_logo" />
                 <h3>Kanidm is loading, please wait... </h3>
             </center>
         </main>
         <footer class="footer mt-auto py-3 bg-light text-end">
             <div class="container">
-                <span class="text-muted">Powered by <a href="https://kanidm.com">Kanidm</a></span>
+                <span class="text-muted">Powered by <a
+                        href="https://kanidm.com">Kanidm</a></span>
             </div>
         </footer>
     </body>
